; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/acpi/acpica/extr_dswstate.c_acpi_ds_result_stack_push.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/acpi/acpica/extr_dswstate.c_acpi_ds_result_stack_push.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.acpi_walk_state = type { i64, i32 }
%union.acpi_generic_state = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@ds_result_stack_push = common dso_local global i32 0, align 4
@ACPI_RESULTS_FRAME_OBJ_NUM = common dso_local global i64 0, align 8
@ACPI_RESULTS_OBJ_NUM_MAX = common dso_local global i64 0, align 8
@AE_INFO = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [39 x i8] c"Result stack overflow: State=%p Num=%X\00", align 1
@AE_STACK_OVERFLOW = common dso_local global i32 0, align 4
@AE_NO_MEMORY = common dso_local global i32 0, align 4
@ACPI_DESC_TYPE_STATE_RESULT = common dso_local global i32 0, align 4
@ACPI_DB_EXEC = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [21 x i8] c"Results=%p State=%p\0A\00", align 1
@AE_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.acpi_walk_state*)* @acpi_ds_result_stack_push to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @acpi_ds_result_stack_push(%struct.acpi_walk_state* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.acpi_walk_state*, align 8
  %4 = alloca %union.acpi_generic_state*, align 8
  store %struct.acpi_walk_state* %0, %struct.acpi_walk_state** %3, align 8
  %5 = load i32, i32* @ds_result_stack_push, align 4
  %6 = call i32 @ACPI_FUNCTION_NAME(i32 %5)
  %7 = load %struct.acpi_walk_state*, %struct.acpi_walk_state** %3, align 8
  %8 = getelementptr inbounds %struct.acpi_walk_state, %struct.acpi_walk_state* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = load i64, i64* @ACPI_RESULTS_FRAME_OBJ_NUM, align 8
  %11 = add nsw i64 %9, %10
  %12 = load i64, i64* @ACPI_RESULTS_OBJ_NUM_MAX, align 8
  %13 = icmp sgt i64 %11, %12
  br i1 %13, label %14, label %23

14:                                               ; preds = %1
  %15 = load i32, i32* @AE_INFO, align 4
  %16 = load %struct.acpi_walk_state*, %struct.acpi_walk_state** %3, align 8
  %17 = load %struct.acpi_walk_state*, %struct.acpi_walk_state** %3, align 8
  %18 = getelementptr inbounds %struct.acpi_walk_state, %struct.acpi_walk_state* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = trunc i64 %19 to i32
  %21 = call i32 @ACPI_ERROR(i32 %20)
  %22 = load i32, i32* @AE_STACK_OVERFLOW, align 4
  store i32 %22, i32* %2, align 4
  br label %49

23:                                               ; preds = %1
  %24 = call %union.acpi_generic_state* (...) @acpi_ut_create_generic_state()
  store %union.acpi_generic_state* %24, %union.acpi_generic_state** %4, align 8
  %25 = load %union.acpi_generic_state*, %union.acpi_generic_state** %4, align 8
  %26 = icmp ne %union.acpi_generic_state* %25, null
  br i1 %26, label %29, label %27

27:                                               ; preds = %23
  %28 = load i32, i32* @AE_NO_MEMORY, align 4
  store i32 %28, i32* %2, align 4
  br label %49

29:                                               ; preds = %23
  %30 = load i32, i32* @ACPI_DESC_TYPE_STATE_RESULT, align 4
  %31 = load %union.acpi_generic_state*, %union.acpi_generic_state** %4, align 8
  %32 = bitcast %union.acpi_generic_state* %31 to %struct.TYPE_2__*
  %33 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %32, i32 0, i32 0
  store i32 %30, i32* %33, align 4
  %34 = load %struct.acpi_walk_state*, %struct.acpi_walk_state** %3, align 8
  %35 = getelementptr inbounds %struct.acpi_walk_state, %struct.acpi_walk_state* %34, i32 0, i32 1
  %36 = load %union.acpi_generic_state*, %union.acpi_generic_state** %4, align 8
  %37 = call i32 @acpi_ut_push_generic_state(i32* %35, %union.acpi_generic_state* %36)
  %38 = load i64, i64* @ACPI_RESULTS_FRAME_OBJ_NUM, align 8
  %39 = load %struct.acpi_walk_state*, %struct.acpi_walk_state** %3, align 8
  %40 = getelementptr inbounds %struct.acpi_walk_state, %struct.acpi_walk_state* %39, i32 0, i32 0
  %41 = load i64, i64* %40, align 8
  %42 = add nsw i64 %41, %38
  store i64 %42, i64* %40, align 8
  %43 = load i32, i32* @ACPI_DB_EXEC, align 4
  %44 = load %union.acpi_generic_state*, %union.acpi_generic_state** %4, align 8
  %45 = load %struct.acpi_walk_state*, %struct.acpi_walk_state** %3, align 8
  %46 = ptrtoint %struct.acpi_walk_state* %45 to i32
  %47 = call i32 @ACPI_DEBUG_PRINT(i32 %46)
  %48 = load i32, i32* @AE_OK, align 4
  store i32 %48, i32* %2, align 4
  br label %49

49:                                               ; preds = %29, %27, %14
  %50 = load i32, i32* %2, align 4
  ret i32 %50
}

declare dso_local i32 @ACPI_FUNCTION_NAME(i32) #1

declare dso_local i32 @ACPI_ERROR(i32) #1

declare dso_local %union.acpi_generic_state* @acpi_ut_create_generic_state(...) #1

declare dso_local i32 @acpi_ut_push_generic_state(i32*, %union.acpi_generic_state*) #1

declare dso_local i32 @ACPI_DEBUG_PRINT(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
